[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python3-saml"
version = "1.16.0"
description = "Saml Python Toolkit. Add SAML support to your Python software using this library"
license = {file = "LICENSE"}
authors = [
    {name = "SAML-Toolkits", email = "contact@iamdigitalservices.com"}
]
maintainers = [
    {name = "Sixto Martin", email = "sixto.martin.garcia@gmail.com"}
]
readme = "README.md"
keywords = [
    "saml",
    "saml2",
    "sso",
    "xmlsec",
    "federation",
    "identity",
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "lxml>=4.6.5,!=4.7.0",
    "xmlsec>=1.3.9",
    "isodate>=0.6.1",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://saml.info"
Source = "https://github.com/SAML-Toolkits/python3-saml"
"Bug Tracker" = "https://github.com/SAML-Toolkits/python3-saml/issues"
Changelog = "https://github.com/SAML-Toolkits/python3-saml/blob/master/changelog.md"

[project.optional-dependencies]
test = [
    "coverage==7.6.10",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
]
lint = [
    "black==24.4.2",
    "flake8>=3.6.0, <=5.0.0",
    "pylint==3.3.3",
    "mypy==1.14.0",
    "mypy-extensions==1.0.0",
    "types-requests==2.32.0.20241016",
    "types-tabulate==0.9.0.20241207",
    "isort==5.13.2",
    "ruff==0.8.4",
    "astroid==3.3.8",
    "dill==0.3.9",
    "platformdirs==4.3.6",
    "tomli==2.2.1",
    "tomlkit==0.13.2",
]
docs = [
    "Sphinx==7.1.2",
    "sphinx-rtd-theme==1.3.0",
    "sphinx_mdinclude==0.6.1",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-httpdomain==1.8.1",
    "sphinxcontrib-jquery==4.1",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-openapi==0.8.4",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "readthedocs-sphinx-search==0.3.2",
    "docutils==0.18.1",
    "alabaster==0.7.16",
    "babel==2.16.0",
    "imagesize==1.4.1",
    "snowballstemmer==2.2.0",
    "Jinja2==3.1.5",
    "MarkupSafe==3.0.2",
    "Pygments==2.18.0",
    "mistune==3.1.0",
    "nh3==0.2.20",
]
build = [
    "twine==6.0.1",
    "readme_renderer==43.0",
    "pkginfo==1.12.0",
    "requests-toolbelt==1.0.0",
    "keyring==25.6.0",
    "jaraco.classes==3.4.0",
    "jaraco.context==6.0.1",
    "jaraco.functools==4.1.0",
    "more-itertools==10.5.0",
    "pywin32-ctypes==0.2.3",
    "rich==13.9.4",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "rfc3986==2.0.0",
    "restructuredtext_lint==1.4.0",
]
dev = [
    "PyYAML==6.0.2",
    "annotated-types==0.7.0",
    "attrs==24.3.0",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "colorama==0.4.6",
    "deepmerge==2.0",
    "idna==3.10",
    "importlib_metadata==8.5.0",
    "iniconfig==2.0.0",
    "jsonschema-specifications==2024.10.1",
    "jsonschema==4.23.0",
    "mccabe==0.7.0",
    "packaging==24.2",
    "picobox==4.0.0",
    "pluggy==1.5.0",
    "pydantic==2.10.4",
    "pydantic_core==2.27.2",
    "referencing==0.35.1",
    "requests-mock==1.12.1",
    "requests==2.32.3",
    "rpds-py==0.22.3",
    "six==1.17.0",
    "tabulate==0.9.0",
    "typing_extensions==4.12.2",
    "urllib3==2.3.0",
    "vhelpers==0.1.22",
    "zipp==3.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/onelogin"]

[tool.hatch.build.targets.wheel.force-include]
"src/onelogin/saml2/schemas/*.xsd" = "onelogin/saml2/schemas/"

[tool.pytest.ini_options]
minversion = "4.6.11"
addopts = "-ra -vvv"
testpaths = [
    "tests",
]
pythonpath = [
    "tests",
]

[tool.black]
line-length = 200

[tool.isort]
profile = "black"
# The 'black' profile means:
#   multi_line_output = 3
#   include_trailing_comma = true
#   force_grid_wrap = 0
#   use_parentheses = true
#   ensure_newline_before_comments = true
#   line_length = 88
line_length = 200  # override black provile line_length
force_single_line = true  # override black profile multi_line_output
star_first = true
group_by_package = true
force_sort_within_sections = true
lines_after_imports = 2
honor_noqa = true
atomic = true
ignore_comments = true
skip_gitignore = true
src_paths = ['src']

[tool.coverage.run]
branch = true

[tool.coverage.paths]
source = [
    "src/onelogin/saml2"
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "if debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
show_missing = true
ignore_errors = true


[tool.coverage.html]
directory = "coverage_html_report"